--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
 		}
 	],
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"doctrine/dbal": "^2.5",
+		"guzzlehttp/guzzle": "^6.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
