--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,12 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
+			"bower install",
 			"php artisan clear-compiled",
 			"php artisan optimize"
 		],
 		"post-update-cmd": [
+			"bower install",
 			"php artisan clear-compiled",
 			"php artisan optimize"
 		],
