Подготовил контроллеры для опроса студентов + layout + index view + css animation

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ SESSION_DRIVER=file
 
 JOURNAL_API_LOGIN=some_login
 JOURNAL_API_PASSWORD=some_password
+
+STUDENT_SECRET_SALT=super_%1$s_student_%1$s_salt
