--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
   ],
   "dependencies": {
     "jquery": "~2.2.0",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "animate.css": "~3.5.1",
+    "bootswatch": "~3.3.6+1"
   }
 }
