--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ JOURNAL_API_LOGIN=some_login
 JOURNAL_API_PASSWORD=some_password
 
 STUDENT_SECRET_SALT=super_%1$s_student_%1$s_salt
+
+# текущий академический год и семестер
+ACADEMIC_YEAR=2015
+ACADEMIC_SEMESTER=1
