Просмотр результатов анкетирования

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ STUDENT_SECRET_SALT=super_%1$s_student_%1$s_salt
 # текущий академический год и семестер
 ACADEMIC_YEAR=2015
 ACADEMIC_SEMESTER=1
+
+# логин/пароль админа
+ADMIN_LOGIN=
+ADMIN_PASSWORD=
