Изменил уровень с которого отображаем галочку "ОК" в отчете

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ ACADEMIC_SEMESTER=1
 # логин/пароль админа
 ADMIN_LOGIN=
 ADMIN_PASSWORD=
+
+# с какого уровня отображать галочку возле ответа в результатах опроса.
+# Если ответов 80%+ - отображать галочку возле ответа в отчете
+REPORT_SHOW_ICON_OK_FROM_LEVEL = 80
