Запуск и выключение анкетирования из админки

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ JOURNAL_API_PASSWORD=some_password
 STUDENT_SECRET_SALT=super_%1$s_student_%1$s_salt
 
 # текущий академический год и семестер
+# эти значения перекрываются из файла .academic.env
 ACADEMIC_YEAR=2015
 ACADEMIC_SEMESTER=1
 
